--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -822,7 +822,7 @@ The funders had no role in preparing the manuscript or the decision to publish i
 
 ## Contributions
 
-DH proposed the chapter. JB developed the approach and wrote the first draft. Both authors contributed substantially to the final work.
+DH proposed the chapter. JB developed the approach and wrote the first draft. Both authors contributed substantially to the final work.@appendix_a
 
 
 ## References
@@ -830,7 +830,9 @@ DH proposed the chapter. JB developed the approach and wrote the first draft. Bo
 ::: {#refs}
 :::
 
-## Appendix A: Glossary
+
+
+## Appendix A: Glossary {.appendix}
 
 
 **Acyclic**: a causal diagram cannot contain feedback loops. More precisely, no variable can be an ancestor or descendant of itself. If variables are repeatedly measured here, it is especially important to index nodes by the relative timing of the nodes.
@@ -936,7 +938,7 @@ bias. Not controlling for it can retain bias.
 
 
 
-## Appendix B: Causal Consistency in observational settings
+## Appendix B: Causal Consistency in observational settings {.appendix}
 
 In observational research, there are typically multiple versions of treatment. The theory of causal inference under multiple versions of treatment proves we can consistently estimate causal effects where the different versions of treatment are conditionally independent of the outcomes [@vanderweele2009, @vanderweele2009; @vanderweele2013; @vanderweele2018] 
 
@@ -956,7 +958,7 @@ Here, the conditional independence implies that, given measured confounders $L$ 
 Put simply, strategies for confounding control and for consistently estimating causal effects when there are multiple versions of treatment converge. However, the quantities we estimate under multiple versions of treatment might lack any clear interpretations.  For example, we cannot readily determine which of the many versions of treatment is most causal efficacious and which lack any causal effect, or are harmful.  
 
 
-## Appendix C: Computing the Average Treatment Effect
+## Appendix C: Computing the Average Treatment Effect {.appendix}
 
 
 ```{r}
@@ -1078,7 +1080,7 @@ ATE_fit_2 <-
 
 
 
-## Appendix D: Simulation of Different Confounding Control Strategies
+## Appendix D: Simulation of Different Confounding Control Strategies {.appendix}
 
 
 Here are data illustrating how different confounding control strategies perform against the "ground truth" of simulated data. This simulation reveals that (1) standard control for confounding may not perform optimally when there is unmeasured confounding and (2) including the baseline treatment and outcome, if these variables are strongly correlated with the unmeasured confounder, may substantially reduce the effect of unmeasured confounding
@@ -1297,5 +1299,5 @@ ATE_fit_causal_forest <-
   )
 ```
 
-Causal forest estimates the average treatment effect as `r ATE_fit_causal_forest`. This converges to to the true value supplied to the genearating mechanism of 0.3
+Causal forest estimates the average treatment effect as `r ATE_fit_causal_forest`. This converges to to the true value supplied to the generating mechanism of 0.3
 
