--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -225,7 +225,7 @@ Inference, Confounding, Environmental, Psychology, Panel},
 
 \title{Causal Inference in Environmental Psychology}
 \author{Joseph A. Bulbulia \and Donald W Hine}
-\date{2024-02-14}
+\date{2024-02-15}
 
 \begin{document}
 \maketitle
@@ -2028,7 +2028,8 @@ manuscript or the decision to publish it.
 \subsection{Contributions}\label{contributions}
 
 DH proposed the chapter. JB developed the approach and wrote the first
-draft. Both authors contributed substantially to the final work.
+draft. Both authors contributed substantially to the final
+work.@appendix\_a
 
 \subsection{References}\label{references}
 
@@ -2824,7 +2825,7 @@ we include an example of such a model using the causal forest package.
 \end{Shaded}
 
 Causal forest estimates the average treatment effect as ATE = 0.3, se =
-0.01. This converges to to the true value supplied to the genearating
+0.01. This converges to to the true value supplied to the generating
 mechanism of 0.3
 
 
