--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -223,7 +223,7 @@ Inference, Confounding, Environmental, Psychology, Panel},
 
 \title{Causal Inference in Environmental Psychology}
 \author{Joseph A. Bulbulia \and Donald W Hine}
-\date{2024-02-18}
+\date{2024-02-19}
 
 \begin{document}
 \maketitle
@@ -1691,16 +1691,18 @@ psychologists.
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  \textbf{Assumption management}: the crux of causal inference,
-  regardless of data type, is the management of assumptions. Although
-  cross-sectional analyses typically demand stronger assumptions owing
-  to the snapshot nature of data, these assumptions, when transparently
-  articulated, do not always bar causal analysis. For instance, if
-  investigating the effect of green spaces on mental health,
-  longitudinal data might allow discovery of effects owing to changes in
-  access to green spaces, however cross-sectional data might still offer
-  insights if we control for known confounders such as age,
-  socioeconomic status, and urban vs.~rural living environments.
+  \textbf{Graphically encode causal assumptions}: causal inference turns
+  on assumptions. Although cross-sectional analyses typically demand
+  much stronger assumptions owing to the snapshot nature of data, these
+  assumptions, when transparently articulated, do not always bar causal
+  analysis. By stating different assumptions, and modelling the data in
+  accordance with these assumptions, we might find that certain causal
+  conclusions are robust to these differences. Where the implications of
+  different assumptions disagree, we can often better determine the
+  forms of data collection that would be required to settle such
+  differences. Below we consider an example where assumptions point to
+  different conclusions, revealing the need to collect time-series data
+  to assess whether a variable is a confounder or a mediator.
 \item
   \textbf{Stable confounders}: in cross-sectional studies, some
   confounders are inherently stable over time, such as ethnicity, year
@@ -1805,13 +1807,28 @@ covariates and interactions, to estimate an average treatment effects
 requires additional steps. We present code for obtaining marginal
 treatment effects in \hyperref[appendix-c]{Appendix C}
 
-On the assumptions outlined in , in which we \emph{assert} that exercise
-is a confounder, the average treatment effect of access to green space
-on happiness is ATE = -0.27, CI = {[}-0.52, -0.01{]}.
+On the assumptions outlined in Table~\ref{tbl-cs} row 1, in which we
+\emph{assert} that exercise is a confounder, the average treatment
+effect of access to green space on happiness is ATE = 2.92, CI =
+{[}2.66, 3.21{]}.
 
-However, on the assumptions outline in DAG , in which we \emph{assert}
-that exercise is a mediator, the average treatment effect of access to
-green space on happiness is ATE = 2.92, CI = {[}2.66, 3.21{]}.
+On the assumptions outlined in Table~\ref{tbl-cs} row 2, in which we
+\emph{assert} that exercise is a mediator, the average treatment effect
+of access to green space on happiness is ATE = -0.27, CI = {[}-0.52,
+-0.01{]}.
+
+Note that although the mediator \(L\) is ``highly significant'',
+including it in the model turns out to be a mistake. We obtain a
+negative effect estimate for the causal effect of greenspace access on
+happiness.
+
+With only cross-sectional data, we must infer the results are
+inconclusive, and that longitudinal data must be collected to obtain
+valid causal inferences. Such understanding, although perhaps not the
+definitive answer we sought, is nevertheless progress. The result tells
+us we should not be overly confident with our analysis (whatever
+p-values we recover!), and it clarifies that longitudinal data are
+needed.
 
 These findings illustrate the role that assumptions about the relative
 timing of exercise as a confounder or as a mediator plays.
