dons dags tutorial

--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -36,7 +36,7 @@ format:
       - left=20mm
       - heightrounded
     header-includes:
-      - \input{/Users/joseph/GIT/templates/latex/custom-commands.tex}
+      - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 date: last-modified
 execute:
   echo: false
@@ -1050,7 +1050,7 @@ TMLE operates through a two-step process involving both outcome and treatment (e
 
 The second step of TMLE involves "targeting" these initial estimates by incorporating information about the observed data distribution to improve the accuracy of the causal effect estimate. This is achieved through an iterative updating process, which adjusts the initial estimates towards the true causal effect. This updating process is guided by the efficient influence function, ensuring that the final TMLE estimate is as close as possible to the true causal effect while still being robust to model misspecification in either the outcome or treatment model.
 
-A central feature of TMLE is its double-robustness property, meaning that if either the model for the treatment or the outcome is correctly specified, the TMLE estimator will still consistently estimate the causal effect. Additionally, TMLE uses cross-validation to avoid overfitting and ensure that the estimator performs well in finite samples. Each of these steps contributes to a robust methodology for examining the *causal* effects on of interventions on outcomes. The marriage of TMLE and machine learning technologies reduces the dependence on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021]
+A central feature of TMLE is its double-robustness property, meaning that if either the model for the treatment or the outcome is correctly specified, the TMLE estimator will still consistently estimate the causal effect. Additionally, TMLE uses cross-validation to avoid overfitting and ensure that the estimator performs well in finite samples. Each of these steps contributes to a robust methodology for examining the *causal* effects on of interventions on outcomes. The marriage of TMLE and machine learning technologies reduces the dependence on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021].
 
 ### Eligibility criteria for inclusion in the causal effects of shifting to a gain of weekly religious service attendance
 
@@ -1446,8 +1446,6 @@ For the outcome 'Warm Muslims: weekly church >= 1', the PATE causal contrast is 
 3.  **Generalisability and transportability**: our findings should be interpreted within the context of the New Zealand population from which the data were sourced. Although the results may have broader relevance, direct extrapolation to different populations or sociocultural settings should be undertaken cautiously.
 
 ### Theoretical and practical relevance
-
-
 
 
 {{< pagebreak >}}
