--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
@@ -124,7 +124,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{makecell}
 \usepackage{xcolor}
-\input{/Users/joseph/GIT/templates/latex/custom-commands.tex}
+\input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -189,36 +189,38 @@ Intervention, Volunteering},
 donations and volunteering, minority-group-attitudes, and help-received:
 evidence from a national panel study}
 \author{Joseph A. Bulbulia \and Chris G. Sibley}
-\date{2024-02-09}
+\date{2024-02-28}
 
 \begin{document}
 \maketitle
 \begin{abstract}
-This study employs panel data from the New Zealand Attitudes and Values
-Study, a longitudinal survey of 30,000 New Zealanders, to examine the
-causal impact of religious service attendance on prosocial behaviors
-across three dimensions: charitable donations and volunteering,
-attitudes towards minority groups (``warmth''), and help received from
-others---a novel metric. Our analysis distinguishes between the effects
-of initiating weekly religious service attendance for non-attendees and
-ceasing any religious participation. Additionally, we conduct a parallel
-comparison with a general shifts in community social engagement to
-discern the unique contributions of religious service to prosociality.
-\textbf{Charitable Donations and Volunteering}: Findings indicate that
-regular attendance at religious services increases annual charitable
-donations by approximately \$700 per adult, without a corresponding
-effect from general social engagement. Both activities, however,
-similarly elevate volunteering rates. \textbf{Prejudice Reduction}:
-Attendance at religious services enhances warmth towards all social
-groupsl. In contrast, general social engagement only reliably improves
-attitudes towards Māori, New Zealand's largest minority group.
-\textbf{Help Received}: Engagement in regular religious services leads
-to increased community support, but not too greater support from family
-and friends. Conversely, general social engagement boosts support from
-family and friends but not from the community. The discontinuation of
-any religious service attendance results in reduced volunteering but
-does not affect charitable donations, suggesting that religious service
-may foster enduring charitable habits. In summary, acquiring religious
+This outcome-wide study employs panel data from the New Zealand
+Attitudes and Values Study to examine the causal effect of religious
+service attendance on prosocial behaviors across three dimensions: (1)
+charitable donations and volunteering; (2) attitudes towards minority
+groups (``warmth''); and (3) help received from others ---- a novel
+metric for group-induced cooperation that avoids self-presentation bias
+(\emph{N} =32.058, years = 2018-2021). To better understand the effects
+religious community participant we conduct a parallel comparison
+invetigation the causal effects of greater community engagement; Finally
+we model the population-wide effects of loss of religious activity and
+in a separate analysis of community engagelment. \textbf{Charitable
+Donations and Volunteering}: Findings indicate that regular attendance
+at religious services increases annual charitable donations by an
+average of approximately \$700 per adult across the population. We do
+not observed such an effect from greater community engagement. Both
+religious service and general community engagement, however, similarly
+elevate volunteering rates. \textbf{Prejudice Reduction}: Attendance at
+religious services enhances warmth towards all social groups. In
+contrast, general social engagement only reliably improves attitudes
+towards Māori, New Zealand's largest minority group. \textbf{Help
+Received}: Engagement in regular religious services leads to increased
+community support and friends, but not to greater support from family.
+Conversely, general social engagement boosts support from family and
+friends but not from the community. Finally, discontinuation of any
+religious service attendance results in reduced volunteering but does
+not affect charitable donations, suggesting that religious service may
+foster enduring charitable habits. In summary, acquiring religious
 service attendance enhances charitable giving and reduces prejudice more
 effectively than mere social engagement, with the cessation of religious
 services demonstrating distinct outcomes. This supports theories
@@ -253,10 +255,9 @@ multi-culural western society.
 Finally, we compute the economic value of religious service attendance
 on prosocial behaviors. This estimation provides a concrete measure of
 religious involvement's ``cash value'' in the New Zealand economy
-(\citeproc{ref-bulbulia2022}{Bulbulia 2022};
-\citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.} 2023};
-\citeproc{ref-bulbulia2023}{Bulbulia 2023};
-\citeproc{ref-hernan2023}{Hernan and Robins 2023};
+(\citeproc{ref-bulbulia2022}{Bulbulia 2022},
+\citeproc{ref-bulbulia2023}{2023}; \citeproc{ref-bulbulia2023a}{Bulbulia
+\emph{et al.} 2023}; \citeproc{ref-hernan2023}{Hernan and Robins 2023};
 \citeproc{ref-vanderweele2015}{VanderWeele 2015}))
 
 \subsection{Method}\label{method}
