--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -1156,7 +1156,7 @@ causal estimate for the effect of interest [@pearl2009].
 
 **Ancestor (parent)**: a node with a direct or indirect influence on others, positioned upstream in the causal chain.
 
-**Arrow denotes a causal relationship linking nodes.
+**Arrow**: denotes a causal relationship linking nodes.
 
 **Backdoor path**: a "backdoor path" between a treatment variable, $A$, and an outcome variable, $Y$, is a sequence of links in a causal diagram that starts with an arrow into $A$ and reaches $Y$ through common causes, introducing potential confounding bias such that statistical association does not reflect causality. To estimate the causal effect of $A$ on $Y$ without bias, these paths must be blocked by adjusting for confounders. The backdoor criterion guides the selection of variables for adjustment to ensure unbiased causal inference.
 
@@ -1172,7 +1172,7 @@ machine learning algorithms, or other methods. We do not cover such methods in t
 **Confounder**: a member of an adjustment set. Notice a variable is a "confounder" in relation to a specific adjustment set. "Confounder" is a
 relative concept [@lash2020].
 
-**D-separation**: in a causal diagram, a path is "blocked" or "d-separated" if a node along it interrupts causation. Two variables are
+**d-separation**: in a causal diagram, a path is "blocked" or "d-separated" if a node along it interrupts causation. Two variables are
 d-separated if all paths connecting them are blocked, making them conditionally independent. Conversely, unblocked paths result in
 "d-connected" variables, implying potential dependence [@pearl1995].
 
