--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -224,7 +224,7 @@ Inference, Confounding, Environmental, Psychology, Panel},
 
 \title{Causal Inference in Environmental Psychology}
 \author{Joseph A Bulbulia \and Donald W Hine}
-\date{2024-02-28}
+\date{2024-02-29}
 
 \begin{document}
 \maketitle
@@ -2269,7 +2269,7 @@ consistent causal estimate for the effect of interest
 \textbf{Ancestor (parent)}: a node with a direct or indirect influence
 on others, positioned upstream in the causal chain.
 
-**Arrow denotes a causal relationship linking nodes.
+\textbf{Arrow}: denotes a causal relationship linking nodes.
 
 \textbf{Backdoor path}: a ``backdoor path'' between a treatment
 variable, \(A\), and an outcome variable, \(Y\), is a sequence of links
@@ -2313,7 +2313,7 @@ a ``confounder'' in relation to a specific adjustment set.
 ``Confounder'' is a relative concept (\citeproc{ref-lash2020}{Lash
 \emph{et al.} 2020}).
 
-\textbf{D-separation}: in a causal diagram, a path is ``blocked'' or
+\textbf{d-separation}: in a causal diagram, a path is ``blocked'' or
 ``d-separated'' if a node along it interrupts causation. Two variables
 are d-separated if all paths connecting them are blocked, making them
 conditionally independent. Conversely, unblocked paths result in
